--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>King of Tokyo Game</title>
     <link rel="stylesheet" href="./css/style.css">
     <!-- We'll place bootstrap here -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
     <!-- We'll place jQuery Here -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
@@ -16,6 +16,37 @@
     <script defer src="./js/script.js"></script>
 </head>
 <body>
+    <header>
+        <h1>KOT</h1>
+    </header>
+<main>
+    <section id = "die1">
+        <div class="dice">o</div>
+    </section>
+    <section id = "die2">
+        <div class="dice">o</div>
+    </section>
+    <section id = "die3">
+        <div class="dice">o</div>
+    </section>
+    <section id = "die4">
+        <div class="dice">o</div>
+    </section>
+    <section id = "die5">
+        <div class="dice">o</div>
+    </section>
+    <section id = "die6">
+        <div class="dice">o</div>
+    </section>
+</br>
+<button id="roll">BUTTON</button>
+</main>
+<div id = "container">
+    <article><div>Player 1</div></article>
+    <article><div>Player 2</div></article>
+    <article><div>Player 3</div></article>
+    <article><div>Player 4</div></article>
+</div>
     
 </body>
 </html>
