--- a/index.html
+++ b/index.html
@@ -18,34 +18,35 @@
 <body>
     <header>
         <h1>KOT</h1>
+        <button id="endTurn">END YOUR TURN</button>
     </header>
 <main>
-    <section id = "die1">
+    <section class = "dieHold" id = "die1">
         <div class="dice">o</div>
     </section>
-    <section id = "die2">
+    <section class = "dieHold" id = "die2">
         <div class="dice">o</div>
     </section>
-    <section id = "die3">
+    <section class = "dieHold" id = "die3">
         <div class="dice">o</div>
     </section>
-    <section id = "die4">
+    <section class = "dieHold" id = "die4">
         <div class="dice">o</div>
     </section>
-    <section id = "die5">
+    <section class = "dieHold" id = "die5">
         <div class="dice">o</div>
     </section>
-    <section id = "die6">
+    <section class = "dieHold" id = "die6">
         <div class="dice">o</div>
     </section>
 </br>
-<button id="roll">BUTTON</button>
+<button id="roll">ROLL YO DICE HOMBOI</button>
 </main>
 <div id = "container">
-    <article><div>Player 1</div></article>
-    <article><div>Player 2</div></article>
-    <article><div>Player 3</div></article>
-    <article><div>Player 4</div></article>
+    <article><div class="player" id="1">Player 1</div></article>
+    <article><div class="player" id="2">Player 2</div></article>
+    <article><div class="player" id="3">Player 3</div></article>
+    <article><div class="player" id="4">Player 4</div></article>
 </div>
     
 </body>
