added to show user active data, added location of users, users now track h/e/vp

--- a/index.html
+++ b/index.html
@@ -43,10 +43,35 @@
 <button id="roll">ROLL YO DICE HOMBOI</button>
 </main>
 <div id = "container">
-    <article><div class="player" id="1">Player 1</div></article>
-    <article><div class="player" id="2">Player 2</div></article>
-    <article><div class="player" id="3">Player 3</div></article>
-    <article><div class="player" id="4">Player 4</div></article>
+    <article><div class="player" id="1">
+      <div class="username">Player 1</div>
+      <div class="health"></div>
+      <div class="vp"></div>
+      <div class="energy"></div>
+      <div class="loc"></div>
+     
+    </div></article>
+    <article><div class="player" id="2">
+        <div class="username">Player 2</div>
+        <div class="health"></div>
+        <div class="vp"></div>
+        <div class="energy"></div>
+        <div class="loc"></div>
+    </div></article>
+    <article><div class="player" id="3">
+        <div class="username">Player 3</div>
+        <div class="health"></div>
+        <div class="vp"></div>
+        <div class="energy"></div>
+        <div class="loc"></div>
+    </div></article>
+    <article><div class="player" id="4">
+        <div class="username">Player 4</div>
+        <div class="health"></div>
+        <div class="vp"></div>
+        <div class="energy"></div>
+        <div class="loc"></div>
+    </div></article>
 </div>
     
 </body>
