fixed win logic, added images

--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     </header>
 <main>
     <section class = "dieHold" id = "die1">
-        <div class="dice">o</div>
+        <div class="dice"></div>
     </section>
     <section class = "dieHold" id = "die2">
-        <div class="dice">o</div>
+        <div class="dice"></div>
     </section>
     <section class = "dieHold" id = "die3">
-        <div class="dice">o</div>
+        <div class="dice"></div>
     </section>
     <section class = "dieHold" id = "die4">
-        <div class="dice">o</div>
+        <div class="dice"></div>
     </section>
     <section class = "dieHold" id = "die5">
-        <div class="dice">o</div>
+        <div class="dice"></div>
     </section>
     <section class = "dieHold" id = "die6">
-        <div class="dice">o</div>
+        <div class="dice"></div>
     </section>
 </br>
 <button id="roll">ROLL YO DICE HOMBOI</button>
