adds all untracked files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <h1>KOT</h1>
+        <h1>King of Tokyo</h1>
         <button id="endTurn">END YOUR TURN</button>
     </header>
 <main>
