--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-    <h1 data-text="black mirror"><span>King of Tokyo</span></h1>
+<h1>King of Tokyo</h1>   
         <button id="endTurn">END YOUR TURN</button>
     </header>
 <main>
